# webnovell-fastapi-htmx-jinja2-tailwind

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
src/: .env.template  alembic.ini  create_app.py  entrypoint.sh  main.py
src/core/: config.py
src/core/alembic/: env.py
src/core/alembic/versions/: 2025_08_02_1814-5d820c030e4a_first_migration.py  2025_08_09_1612-26be06086d02_create_novel_table_with_gin_index.py  (+3 more)
src/core/models/: __init__.py  base.py  db_helper.py  novel.py  user.py  user_session.py
src/core/security/: passwords.py
src/rest/: __init__.py
src/rest/auth/: schemas.py  service.py  view.py
src/rest/cruds/: novel.py  session.py  user.py
src/rest/schemas/: form.py  novel.py  user.py
src/rest/services/: auth.py  novel.py
src/rest/views/: auth.py  novel.py  user.py
src/static/css/: app.css
src/tailwindcss/: package-lock.json  package.json
src/tailwindcss/styles/: app.css
src/templates/: 404.html  base.html  index-for-auth.html  index.html
src/templates/auth/: base.html  index.html  login.html  register.html
src/templates/components/: base-header.html  button-login.html  header-for-auth-user.html  header-for-non-auth.html  header.html  novell-card.html  profile-button.html
src/templates/novel/: base.html  create.html  novel-create.html  novel.html
src/templates/user/: base.html
src/utils/: __init__.py  loggers.py  minio_helper.py
tests/: conftest.py  database.py  docker-compose.yml  factories.py  factory_.py
tests/integration/: test_novel_crud.py
(+7 files in other folders)
